[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ek-geo>=0.2.1",
    "fastapi>=0.115.5",
    "httpx[socks]>=0.27.2",
    "openai>=1.54.4",
    "prisma>=0.15.0",
    "pydantic>=2.9.2",
    "rss-parser>=2.1.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "rich>=13.9.4",
]
